fix h1 mark layout problem

--- a/_layout.scss
+++ b/_layout.scss
@@ -81,7 +81,8 @@
   @media screen and (min-width: $safe-for-full) {
     max-width: $full-width;
 
-    h1 a {
+    h1 a,
+    h1 mark {
       margin-left: 0.667em;
     }
 
